# hackathon-tv5

./: .gcloudignore  .gitignore  Dockerfile.media-discovery  README.md
apps/arw-inspector/: .gitignore  (+11 more)
apps/arw-knowledge-graph/lbs-knowledge-graph/: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PERSONA_CLASSIFICATION_SUMMARY.txt  PHASE_1_COMPLETE.txt  QUICKSTART_SENTIMENT.txt  README.md  TOPIC_EXTRACTION_COMPLETE.txt  coverage.json  docker-compose.yml  mgraph.py  pyproject.toml  pytest.ini  requirements-llm.txt  requirements.txt
apps/arw-knowledge-graph/lbs-knowledge-graph/data/: graph_with_topics_demo.json  persona_stats.json  sentiment_implementation_stats.json  sentiment_stats.json  topic_extraction_demo.json  topic_stats_demo.json
apps/arw-knowledge-graph/lbs-knowledge-graph/demos/: README.md  demo_1_enhanced_discovery.py  demo_2_personalization.py  demo_3_content_strategy.py  run_all_demos.py
apps/arw-knowledge-graph/lbs-knowledge-graph/docs/: API_REFERENCE.md  COMPLETION_SUMMARY.txt  CONTENT_ANALYSIS.md  DATA_QUALITY_REPORT.md  DEPLOYMENT_GUIDE.md  DOMAIN_MODEL_RECOMMENDATIONS.md  ENRICHMENT_TEST_RESULTS.md  GIT_HOOKS_GUIDE.md  GRAPH_VISUALIZATION_GUIDE.md  INTEGRATION_SETUP_COMPLETE.md  JOURNEY_MAPPING_QUICK_START.md  JOURNEY_MAPPING_RESEARCH_REPORT.md  PATTERN_ANALYSIS_REPORT.md  PERSONA_CLASSIFICATION_COMPLETE.md  PERSONA_CLASSIFICATION_DELIVERABLES.md  PHASE2_RELATIONSHIPS_SUMMARY.md  PHASE3C_DELIVERABLES.md  PHASE3_SENTIMENT_STATUS.md  PHASE_1_CHECKLIST.md  PHASE_1_COMPLETE_SWARM_REPORT.md  PHASE_1_STATUS.md  PHASE_1_SUMMARY.md  PHASE_1_TEST_REPORT.md  PHASE_2_CHECKLIST.md  PHASE_2_COMPLETE_SWARM_REPORT.md  PHASE_2_DELIVERABLES_SUMMARY.md  PHASE_2_GRAPH_COMPLETE.md  PHASE_2_PREP.md  PHASE_2_QUALITY_REPORT.md  PHASE_2_STATUS.md  PHASE_2_TEST_REPORT.md  PHASE_3_COMPLETE_SWARM_REPORT.md  PHASE_3_PROGRESS_REPORT.md  PHASE_3_SIMILARITY_SUMMARY.md  PHASE_3_STATUS.md  PHASE_3_TEST_REPORT.md  PHASE_3_TEST_SUMMARY.txt  PHASE_4_CICD_READY.md  README.md  README_UPDATE_SUMMARY.md  (+14 more)
apps/arw-knowledge-graph/lbs-knowledge-graph/scripts/: build_graph.py  check_budget.py  cost_report.py  crawl.py  demo_topic_extraction.py  enrich_journeys.py  enrich_ner.py  enrich_personas.py  enrich_sentiment.py  enrich_similarity.py  enrich_topic_clusters.py  enrich_topics.py  full_pipeline.py  parse.py  run_ner.py  run_tests.sh  setup-git-hooks.sh  setup.sh  test_api_connectivity.py  test_api_connectivity_claude.py  test_embeddings_comparison.py  test_openrouter.py  test_persona_classification.py  test_sentiment.py  test_sentiment_mock.py  test_sentiment_scale.py  test_sentiment_setup.py  test_small_scale.py  test_topic_extraction.py  validate_all.sh  validate_graph.py  validate_sentiment.py  validate_similarity.py  visualize_graph_interactive.py  visualize_graph_stats.py
apps/arw-knowledge-graph/lbs-knowledge-graph/tests/: conftest.py  test_clustering.py  test_extractors.py  test_graph.py  test_integration_phase2.py  test_integration_phase3.py  test_journeys.py  test_llm_integration.py  test_ner.py  test_persona_classifier.py  test_personas_enhanced.py  test_phase1_validation.py  test_related_to_builder.py  test_relationships.py  test_sentiment_analysis.py  test_similarity_calculator.py  test_topic_extraction.py
(+512 files in other folders)
